--- a/index.html
+++ b/index.html
@@ -1,26 +1,52 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roider Millares | Desarrollador Web & Ingeniero de Software</title>
-    <!-- Meta tags para SEO -->
-    <meta name="description" content="Portafolio profesional de Roider Millares, desarrollador web especializado en Angular, .NET Core y APIs REST con base en Santa Cruz, Bolivia.">
-    <meta name="keywords" content="desarrollador web, programador, angular, .net core, api rest, tailwind, santa cruz, bolivia, desarrollo de software">
-    <meta name="author" content="Roider Millares">
-    <!-- Open Graph / Social Media Meta Tags -->
-    <meta property="og:title" content="Roider Millares | Desarrollador Web & Ingeniero de Software">
-    <meta property="og:description" content="Especialista en Angular, .NET Core y APIs REST. Vea mi portafolio de proyectos de desarrollo web.">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.roidermillares.com">
-    <!-- Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <!-- AOS Animation Library -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
+   <!-- Meta Charset -->
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- Título SEO -->
+<title>Roider Millares | Desarrollador Web & Ingeniero de Software</title>
+
+<!-- Meta Tags para SEO -->
+<meta name="description" content="Explora el portafolio de Roider Millares, desarrollador web especializado en Angular, .NET Core y APIs REST. Creación de software innovador en Santa Cruz, Bolivia.">
+<meta name="keywords" content="desarrollador web, programador, Angular, .NET Core, API REST, Tailwind CSS, software, Santa Cruz, Bolivia, innovación tecnológica">
+<meta name="author" content="Roider Millares">
+<meta name="robots" content="index, follow">
+
+<!-- Canonical URL -->
+<link rel="canonical" href="https://www.roidermillares.com">
+
+<!-- Open Graph / Meta Tags para Redes Sociales -->
+<meta property="og:title" content="Roider Millares | Desarrollador Web & Ingeniero de Software">
+<meta property="og:description" content="Explora mi portafolio de desarrollo web con tecnologías como Angular y .NET Core. Creación de APIs REST, aplicaciones innovadoras y más.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://www.roidermillares.com">
+<meta property="og:image" content="https://www.roidermillares.com/assets/img/portafolio-preview.jpg">
+<meta property="og:image:alt" content="Portafolio de Roider Millares - Desarrollo Web">
+<meta property="og:site_name" content="Roider Millares">
+<meta property="og:locale" content="es_ES">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Roider Millares | Desarrollador Web & Ingeniero de Software">
+<meta name="twitter:description" content="Desarrollo web con Angular, .NET Core y APIs REST en Santa Cruz, Bolivia. Explora mi portafolio y proyectos innovadores.">
+<meta name="twitter:image" content="https://www.roidermillares.com/assets/img/portafolio-preview.jpg">
+<meta name="twitter:site" content="@tuusuario">
+<meta name="twitter:creator" content="@tuusuario">
+
+<!-- Tailwind CSS -->
+<script src="https://cdn.tailwindcss.com"></script>
+
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+<!-- AOS Animation Library -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
+
     <style>
         /* Personalización de estilos */
         body {
@@ -198,10 +224,11 @@
                             <p class="text-gray-600">Ing. en Sistemas - UPDS</p>
                         </div>
                     </div>
-                    <a href="#contact" class="bg-gradient text-white px-8 py-3 rounded-lg font-medium transition-all hover:shadow-lg inline-flex items-center">
+                    <a href="assets/cv.pdf" download="Mi_CV.pdf" class="bg-gradient text-white px-8 py-3 rounded-lg font-medium transition-all hover:shadow-lg inline-flex items-center">
                         <span>Descargar CV</span>
                         <i class="fas fa-download ml-2"></i>
                     </a>
+                    
                 </div>
                 <div class="md:w-1/2" data-aos="fade-left" data-aos-duration="1000">
                     <h3 class="text-2xl font-semibold mb-6">Experiencia y Formación</h3>
@@ -802,34 +829,35 @@
                     </div>
                 </div>
 
-                <!-- Contact Form -->
-                <div class="md:w-3/5" data-aos="fade-left" data-aos-duration="1000">
-                    <h3 class="text-2xl font-semibold mb-6">Envíame un Mensaje</h3>
-                    <form class="space-y-6">
-                        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                            <div>
-                                <label for="name" class="block mb-2 font-medium">Nombre</label>
-                                <input type="text" id="name" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent" placeholder="Tu nombre">
-                            </div>
-                            <div>
-                                <label for="email" class="block mb-2 font-medium">Email</label>
-                                <input type="email" id="email" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent" placeholder="Tu email">
-                            </div>
-                        </div>
-                        <div>
-                            <label for="subject" class="block mb-2 font-medium">Asunto</label>
-                            <input type="text" id="subject" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent" placeholder="Asunto del mensaje">
-                        </div>
-                        <div>
-                            <label for="message" class="block mb-2 font-medium">Mensaje</label>
-                            <textarea id="message" rows="5" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent" placeholder="Tu mensaje"></textarea>
-                        </div>
-                        <button type="submit" class="bg-gradient text-white px-8 py-3 rounded-lg font-medium transition-all hover:shadow-lg inline-flex items-center">
-                            <span>Enviar Mensaje</span>
-                            <i class="fas fa-paper-plane ml-2"></i>
-                        </button>
-                    </form>
-                </div>
+               <!-- Contact Form -->
+<div class="md:w-3/5" data-aos="fade-left" data-aos-duration="1000">
+    <h3 class="text-2xl font-semibold mb-6">Envíame un Mensaje</h3>
+    <form action="https://formspree.io/f/tu_form_id" method="POST" class="space-y-6">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+            <div>
+                <label for="name" class="block mb-2 font-medium">Nombre</label>
+                <input type="text" name="name" id="name" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent" placeholder="Tu nombre">
+            </div>
+            <div>
+                <label for="email" class="block mb-2 font-medium">Email</label>
+                <input type="email" name="email" id="email" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent" placeholder="Tu email">
+            </div>
+        </div>
+        <div>
+            <label for="subject" class="block mb-2 font-medium">Asunto</label>
+            <input type="text" name="subject" id="subject" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent" placeholder="Asunto del mensaje">
+        </div>
+        <div>
+            <label for="message" class="block mb-2 font-medium">Mensaje</label>
+            <textarea name="message" id="message" rows="5" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent" placeholder="Tu mensaje"></textarea>
+        </div>
+        <button type="submit" class="bg-gradient text-white px-8 py-3 rounded-lg font-medium transition-all hover:shadow-lg inline-flex items-center">
+            <span>Enviar Mensaje</span>
+            <i class="fas fa-paper-plane ml-2"></i>
+        </button>
+    </form>
+</div>
+
             </div>
         </div>
     </section>
