--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Roider Millares | Desarrollador Web & Ingeniero de Software">
 <meta name="twitter:description" content="Desarrollo web con Angular, .NET Core y APIs REST en Santa Cruz, Bolivia. Explora mi portafolio y proyectos innovadores.">
-<meta name="twitter:image" content="https://www.roidermillares.com/assets/img/portafolio-preview.jpg">
+<meta name="twitter:image" content="https://roydevteam.github.io/ROY.MILLARES/assets/perfil.jpeg">
 <meta name="twitter:site" content="@tuusuario">
 <meta name="twitter:creator" content="@tuusuario">
 
