--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                             <p class="text-gray-600">Ing. en Sistemas - UPDS</p>
                         </div>
                     </div>
-                    <a href="assets/cv.pdf" download="Mi_CV.pdf" class="bg-gradient text-white px-8 py-3 rounded-lg font-medium transition-all hover:shadow-lg inline-flex items-center">
+                    <a href="assets/ROIDER MILLARES MANO.pdf" download="Mi_CV.pdf" class="bg-gradient text-white px-8 py-3 rounded-lg font-medium transition-all hover:shadow-lg inline-flex items-center">
                         <span>Descargar CV</span>
                         <i class="fas fa-download ml-2"></i>
                     </a>
