--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <meta name="author" content="Roider Millares">
 <meta name="robots" content="index, follow">
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/jpeg" href="assets/IMG-20231230-WA0015(1).jpg"> <!-- Cambia la URL del favicon -->
 <!-- Canonical URL -->
 <link rel="canonical" href="https://www.roidermillares.com">
 
