--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
   <!-- Favicon -->
   <link rel="icon" type="image/jpeg" href="assets/IMG-20231230-WA0015(1).jpg"> <!-- Cambia la URL del favicon -->
 <!-- Canonical URL -->
-<link rel="canonical" href="https://www.roidermillares.com">
+<link rel="canonical" href="https://roider-millares.vercel.app/">
 
 <!-- Open Graph / Meta Tags para Redes Sociales -->
 <meta property="og:title" content="Roider Millares | Desarrollador Web & Ingeniero de Software">
 <meta property="og:description" content="Explora mi portafolio de desarrollo web con tecnologías como Angular y .NET Core. Creación de APIs REST, aplicaciones innovadoras y más.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://www.roidermillares.com">
-<meta property="og:image" content="https://www.roidermillares.com/assets/img/portafolio-preview.jpg">
+<meta property="og:url" content="https://roider-millares.vercel.app">
+<meta property="og:image" content="https://roydevteam.github.io/ROY.MILLARES/assets/perfil.jpeg">
 <meta property="og:image:alt" content="Portafolio de Roider Millares - Desarrollo Web">
 <meta property="og:site_name" content="Roider Millares">
 <meta property="og:locale" content="es_ES">
