--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <meta name="twitter:image" content="https://roydevteam.github.io/ROY.MILLARES/assets/perfil.jpeg">
 <meta name="twitter:site" content="@tuusuario">
 <meta name="twitter:creator" content="@tuusuario">
-
+<meta name="google-site-verification" content="puB95H2yivf9WSolRB_2BihDA1Kp2TKssUmWcqMg9ks" />
 <!-- Tailwind CSS -->
 <script src="https://cdn.tailwindcss.com"></script>
 
